# fluxero-digital-twin-updated

./: .gitignore  CMakeLists.txt  README.md  go.mod  plot_boost.py  test_shim
go_service/: main.go  sim_shim.c  sim_shim.h
netlists/: dcdc_boost_basic.cir
src/: main.cpp  test_shim.c
